--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
-
+    background: gray;
 }
 
 a {
@@ -17,7 +17,6 @@ a {
   }
   
   ul {
-    background: white;
       list-style: none;
       margin: 0;
       padding-left: 0;
@@ -76,20 +75,24 @@ div.container {
     height: 51px;
     background: lightblue;
 }
-.container img {
-    width: 100%;
-    height: auto;
+
+div.summary {
+  background: white;
 }
+
+
 img {
-    float: left;
-    margin-right: 10px;
-    clear:both;
+  float: left;
+  width: 100%;
+  height: auto;
+  /* Magic! */
+  max-width: 25vw;
     
 }
+
 p {
     margin-left: 0px;
-    overflow:auto;
-    display:block;
+    width: 50%;
 }
 
 hr {
@@ -99,4 +102,8 @@ hr {
     border-top: 1px solid #ccc;
     margin: 1em 0;
     padding: 0;
+}
+
+.visuals {
+  background: white;
 }
